# guestkit

./: .dockerignore  .gitignore  API_TEST_RESULTS.md  ARCHITECTURE.md  ASYNC_API_STATUS.md  CHANGELOG.md  CLI-DEVELOPMENT-COMPLETE.md  COMMANDS_SUMMARY.md  COMPLETE-SYSTEM-SUMMARY.md  CONTRIBUTING.md  CRATES-PUBLISHED.md  Cargo.toml  Cargo.toml.workspace  DOCKER-BUILD-FIX-SUMMARY.md  DOCKER-FIX-SESSION.md  DOCKER.md  DOCS-ORGANIZATION-SUMMARY.md  Dockerfile  ENHANCED_INSPECTION.md  ENHANCEMENTS_IMPLEMENTED.md  ENHANCEMENTS_SUMMARY.md  ENHANCEMENT_ROADMAP.md  EXPLORE-COMMAND.md  EXPLORE-COMPLETE-SUMMARY.md  EXPLORE-DEVELOPMENT-SUMMARY.md  EXPLORE-QUICKSTART.md  GUESTFS_IMPLEMENTATION_STATUS.md  IMPROVEMENTS_LOG.md  INSPECT_ENHANCED_IMPROVEMENTS.md  INTERACTIVE_MODE_COMPLETE.md  JOB-PROTOCOL-README.md  K8S-DEPLOYMENT-SUCCESS.md  LIBGUESTFS_IMPLEMENTATION.md  Makefile.docker  NATIVE_ENHANCEMENTS_COMPLETE.md  NEXT_STEPS.md  PHASE-1-COMPLETE.md  PHASE-2-COMPLETE.md  PHASE3_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  (+28 more)
.github/workflows/: build-wheels.yml  ci.yml  integration-tests.yml  release.yml  rpm.yml
benches/: benchmarks.rs  operations.rs  performance.rs
crates/guestkit-job-spec/: Cargo.toml  README.md
crates/guestkit-job-spec/examples/: create_job.rs
crates/guestkit-job-spec/src/: builder.rs  error.rs  lib.rs  types.rs  validation.rs
crates/guestkit-worker/: Cargo.toml  Dockerfile  README.md
crates/guestkit-worker/src/: error.rs  executor.rs  handler.rs  lib.rs  metrics.rs  metrics_server.rs  progress.rs  result.rs  state.rs  worker.rs
crates/guestkit-worker/src/api/: handlers.rs  mod.rs  server.rs  types.rs
crates/guestkit-worker/src/cli/: capabilities.rs  client.rs  commands.rs  daemon.rs  health.rs  list.rs  mod.rs  result.rs  status.rs  submit.rs
crates/guestkit-worker/src/handlers/: echo.rs  mod.rs
crates/guestkit-worker/src/handlers/guestkit/: inspect.rs  mod.rs  profile.rs
crates/guestkit-worker/src/transport/: file.rs  http.rs  mod.rs
docs/: ARCHITECTURE.md  ARCH_TESTING.md  CLI-GUIDE.md  CLI_GUIDE.md  ENHANCEMENT_ROADMAP.md  EXPORT_GUIDE.md  FUTURE-ENHANCEMENTS.md  INDEX.md  MIGRATION_GUIDE.md  PERFORMANCE.md  PROFILES_GUIDE.md  PROPOSED_FEATURES.md  PYTHON_BINDINGS.md  README.md  REORGANIZATION.md  SBAR_SESSION_REPORT.md  TESTING_PERMISSIONS.md  UBUNTU_TESTING.md  UX_IMPROVEMENTS.md  WEEK1_COMPLETE.md  WEEK2_COMPLETE.md  WINDOWS_TESTING_REALISTIC.md  WINDOWS_TESTING_SUMMARY.md  WORKER-INDEX.md  job-protocol-implementation.md  job-protocol-v1.md  systemd-analysis.md  tui-config-example.toml
docs/api/: API_REFERENCE.md  ERGONOMIC_API.md  PYTHON_API_REFERENCE.md  ergonomic-design.md  migration-guide.md  python-reference.md  rust-reference.md
docs/architecture/: UX_IMPROVEMENTS.md  comparison-guide.md  libguestfs-comparison.md  overview.md  performance.md  ux-design.md
docs/archive/: ENHANCED_INSPECTION.md  ENHANCEMENTS_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_REVIEW.md  QUICK_WINS.md  QUICK_WINS_COMPLETE.md  SUMMARY.md  WEEK1_COMPLETE.md  WEEK2_COMPLETE.md  WEEK3_COMPLETE.md  interactive-mode-complete.md  native-enhancements-complete.md  pypi-setup-complete.md  python-implementation-complete.md  session-2026-01-24.md
docs/commands/: BLUEPRINT.md  LICENSE.md
docs/development/: CLI-DEVELOPMENT-SUMMARY.md  COMPLETE-SYSTEM-SUMMARY.md  DOCUMENTATION_ENHANCEMENTS.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL-SESSION-SUMMARY.md  MISSING_APIS.md  NEXT_ENHANCEMENTS.md  RPM-BUILD.md  SESSION-CONTINUATION-2026-01-30.md  SESSION-CONTINUATION-SUMMARY.md  async-api-status.md  enhancement-roadmap.md  enhancement-status.md  enhancements-implemented.md  implementations.md  improvements-log.md  missing-apis.md  next-enhancements.md  next-steps.md  performance-baseline.md  performance-validation.md  publishing.md  q1-2026-medium-term.md  quick-enhancements.md  quick-priorities.md  roadmap-2026.md  roadmap.md  tui-development-plan.md  tui-session-summary.md
docs/features/: INVENTORY_FEATURE.md  INVENTORY_USAGE.md  MIGRATE_FEATURE.md  VALIDATE_USAGE.md  export-formats.md  fix-plans.md  history-persistence.md  html-export.md  output-formats.md  tui-enhancements.md
docs/guides/: COMPARISON_GUIDE.md  DOCKER-QUICKSTART.md  DOCKER-TEST-RESULTS.md  INSPECTION_QUICK_REF.md  INTERACTIVE_MODE.md  K8S-DEPLOYMENT.md  K9S-GUIDE.md  PYPI_PUBLISHING.md  QUICKSTART.md  TROUBLESHOOTING.md
docs/marketing/: article-modern-vm-inspection.md  linkedin-demo-post.md  linkedin-post-visual-output.md  linkedin-post.md
docs/status/: IMPLEMENTATION_COMPLETE.md
docs/testing/: DEBIAN_TESTING.md  PHASE3_TESTING.md  TEST_REPORT.md  TEST_STATUS_SUMMARY.md
docs/user-guides/: best-practices.md  cli-guide.md  faq.md  getting-started.md  profiles.md  (+7 more)
examples/: command_and_archive.rs  convert_disk.rs  create_disk_fluent.rs  detect_format.rs  disk_forensics.rs  fluent_api.rs  inspect_os_typed.rs  inspect_vm.rs  lvm_luks_demo.rs  mount_and_explore.rs  retry_example.rs  system_info.rs  vm_clone_prep.rs
integration/: README.md
k8s/: README.md  configmap.yaml  daemonset.yaml  kustomization.yaml  namespace.yaml  serviceaccount.yaml
scripts/: analyze-performance.sh  api_coverage.py  deploy-to-k3d.sh  find_unimplemented.sh  profile-flamegraph.sh  run_all_phase3_tests.sh  run_all_tests_individual.sh  run_arch_tests.sh  run_debian_tests.sh  run_phase3_tests.sh  run_phase3_windows_tests.sh  run_ubuntu_tests.sh  run_windows_realistic_tests.sh  setup_test_env.sh  test-docker.sh  test_pypi_build.sh  track-performance.sh  validate-docker.sh  validate-performance.sh
src/: lib.rs  main.rs  python.rs
templates/: html_detailed.tpl  html_minimal.tpl  html_standard.tpl  markdown_detailed.tpl  markdown_minimal.tpl  markdown_standard.tpl  text_minimal.tpl  text_standard.tpl
tests/: arch_realistic.rs  debian_realistic.rs  integration_basic.rs  integration_error_handling.rs  integration_lvm_luks.rs  output_formats_test.rs  panic_safety.rs  performance_validation.rs  phase3_comprehensive.rs  phase3_windows.rs  security_tests.rs  test_python_bindings.py  ubuntu_realistic.rs  windows_realistic.rs
(+272 files in other folders)
