[package]
name = "guestkit"
version = "0.3.0"
edition = "2021"
authors = ["Susant Sahani <ssahani@redhat.com>"]
license = "LGPL-3.0-or-later"
description = "Guest VM toolkit for disk inspection and manipulation"
repository = "https://github.com/ssahani/guestkit"
keywords = ["virtualization", "vm", "disk", "qemu", "kvm"]
categories = ["virtualization", "filesystem", "command-line-utilities"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"

# CLI
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4.5"
indicatif = "0.17"
miette = { version = "7.0", features = ["fancy"] }
owo-colors = "4.0"
unicode-width = "0.1"
rustyline = "14.0"
dirs = "5.0"

# Utilities
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Disk image and partition parsing (pure Rust)
memmap2 = "0.9"
byteorder = "1.5"

# Regex for OS detection
regex = "1"

# Glob for pattern matching
glob = "0.3"

# Base64 encoding/decoding
base64 = "0.22"

# Unix system calls for privilege checking
libc = "0.2"

# Windows registry parsing (pure Rust)
nt_hive2 = "3.0"

# Windows event log parsing (pure Rust)
# evtx = { version = "0.8", default-features = false }
# TODO: Add evtx crate when log feature conflicts are resolved

# Report generation and export
askama = "0.12"

# Hashing for cache keys
sha2 = "0.10"

# PyO3 for Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
# Async support - waiting for pyo3-asyncio to support PyO3 0.22
# pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["disk-ops", "guest-inspect"]
disk-ops = []
guest-inspect = []
python-bindings = ["pyo3"]

[[bin]]
name = "guestctl"
path = "src/bin/guestctl.rs"

# Python module (optional)
[lib]
name = "guestkit"
crate-type = ["rlib", "cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "operations"
harness = false
