[package]
name = "guestctl"
version = "0.3.1"
edition = "2021"
authors = ["Susant Sahani <ssahani@redhat.com>"]
license = "LGPL-3.0-or-later"
description = "Pure Rust VM disk toolkit with beautiful output, Windows registry parsing, and VM migration support"
repository = "https://github.com/ssahani/guestkit"
keywords = ["virtualization", "vm", "disk", "qemu", "kvm"]
categories = ["virtualization", "filesystem", "command-line-utilities"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"

# CLI
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4.5"
indicatif = "0.18"
miette = { version = "7.0", features = ["fancy"] }
owo-colors = "4.0"
colored = "2.1"
unicode-width = "0.1"
rustyline = "14.0"
dirs = "5.0"
rpassword = "7.3"

# AI Assistant (optional feature)
rig-core = { version = "0.29", optional = true }
reqwest = { version = "0.12", optional = true }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Utilities
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"

# Disk image and partition parsing (pure Rust)
memmap2 = "0.9"
byteorder = "1.5"

# Regex for OS detection
regex = "1"

# Glob for pattern matching
glob = "0.3"

# Base64 encoding/decoding
base64 = "0.22"

# Unix system calls for privilege checking
libc = "0.2"

# Windows registry parsing (pure Rust)
nt_hive2 = "3.0"

# Windows event log parsing (pure Rust)
# evtx = { version = "0.8", default-features = false }
# TODO: Add evtx crate when log feature conflicts are resolved

# Report generation and export
askama = "0.12"
printpdf = "0.7"

# Hashing for cache keys
sha2 = "0.10"

# Binary serialization for fast caching
bincode = "1.3"

# Parallel processing
rayon = "1.8"

# PyO3 for Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
# Async support - waiting for pyo3-asyncio to support PyO3 0.22
# pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
num_cpus = "1.16"

[features]
default = ["disk-ops", "guest-inspect"]
disk-ops = []
guest-inspect = []
python-bindings = ["pyo3"]
ai = ["rig-core", "reqwest"]

# Python module (optional)
[lib]
name = "guestctl"
crate-type = ["rlib", "cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "performance"
harness = false
