[package]
name = "guestkit-job-spec"
version = "0.1.0"
edition = "2024"
authors = ["Susant Sahani <ssahani@redhat.com>"]
license = "LGPL-3.0-or-later"
description = "VM Operations Job Protocol specification and types"
repository = "https://github.com/ssahani/guestkit"
keywords = ["virtualization", "vm", "job", "protocol"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# ULID generation
ulid = { version = "1.1", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Optional: JSON Schema generation
schemars = { version = "0.8", optional = true }

[dev-dependencies]
serde_yaml = "0.9"

[features]
default = []
schema-gen = ["schemars"]
